UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_Terms_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Terms_Matrix1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Matrix_Line_Last_Update_on__c</fullName>
        <label>Matrix Line  Last Update on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_No_of_Days_REQ_to_Terminate_Agre__c</fullName>
        <inlineHelpText>Please input the number of days notice for agreement termination</inlineHelpText>
        <label>Days&apos; Required - AGR Termination</label>
        <length>13100</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_OWN_USE_Clause_Exists__c</fullName>
        <label>OWN USE Clause Exists?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Overriding_Returns_Terms_in_AGR__c</fullName>
        <label>Overriding Returns Terms in AGR?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Payment_Term_Comments__c</fullName>
        <label>Payment Term Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Price_Protection_Contract_Price1__c</fullName>
        <formula>Phoenix_Price_Protection_Contract_Price__c</formula>
        <label>Price Protection- Contract Price Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Price_Protection_Contract_Price__c</fullName>
        <inlineHelpText>If Agreement contains, list details. Otherwise, put &quot;None&quot;</inlineHelpText>
        <label>Price Protection- Contract Price Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Price_Protection_WAC_Increases1__c</fullName>
        <formula>Phoenix_Price_Protection_WAC_Increases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Protection - WAC Increases</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Price_Protection_WAC_Increases__c</fullName>
        <inlineHelpText>If Agreement contains, list details. Otherwise, put &quot;None&quot;</inlineHelpText>
        <label>Price Protection - WAC Increases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_ROFR_Details__c</fullName>
        <inlineHelpText>Please input any details regarding the &apos;Right of First Refusal&apos;</inlineHelpText>
        <label>ROFR Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Renewal_Term_Length__c</fullName>
        <inlineHelpText>If Applicable</inlineHelpText>
        <label>Renewal Term Length</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Return_Term_Override_Comment__c</fullName>
        <label>Return Term Override Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Service_Level_Penalty_Details__c</fullName>
        <inlineHelpText>Please detail the Service Level Penalties here</inlineHelpText>
        <label>Service Level Penalty Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Shelf_Life_Requirements__c</fullName>
        <inlineHelpText>Please list requirements in months as well as any specific product life requirements</inlineHelpText>
        <label>Shelf Life Requirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Shelf_Stock_Details_IF_ANY__c</fullName>
        <inlineHelpText>If Agreement Contains DRL Standard, put &quot;Drl Standard&quot;, otherwise list details or put &quot;None&quot;</inlineHelpText>
        <label>Shelf Stock Adjustment Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Special_Terms_AGR_Termination__c</fullName>
        <inlineHelpText>Please input any special terms related to agreement termination</inlineHelpText>
        <label>Special Terms - AGR Termination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Special_Terms_CP_Increases__c</fullName>
        <inlineHelpText>Please input any special terms related to Contract Price increases</inlineHelpText>
        <label>Special Terms - CP Increases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Special_Terms_Prod_Rem_Disco_s__c</fullName>
        <inlineHelpText>Please input any special terms for either Product Removals or Discontinuations</inlineHelpText>
        <label>Special Terms - Prod Rem/Disco&apos;s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Special_Terms_WAC_Price_Incs__c</fullName>
        <inlineHelpText>Please input any special terms related to WAC price increases</inlineHelpText>
        <label>Special Terms - WAC Price Incs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Specific_Late_Fee_Details__c</fullName>
        <inlineHelpText>If DRL or customer would owe a penalty for making a late payment of any kind, list it here</inlineHelpText>
        <label>Specific Late Fee Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>In Active</fullName>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Terminated Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Total_Bonafide_Fee_Details1__c</fullName>
        <label>Total Bonafide Fee Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Total_Rebate_Details1__c</fullName>
        <label>Total Rebate Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_VIP_Details__c</fullName>
        <inlineHelpText>Please List VIP Details</inlineHelpText>
        <label>VIP Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <label>Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Terms Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Phoenix_Contract_Category__c</columns>
        <columns>Phoenix_Customer_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Phoenix_Customer_Group__c</columns>
        <columns>Phoenix_Check_Payment__c</columns>
        <columns>Phoenix_ACH__c</columns>
        <columns>Phoenix_Customer_s_Agreement_Effective_D__c</columns>
        <columns>Phoenix_Customer_s_Main_Division__c</columns>
        <columns>Phoenix_Contracts_Assignment__c</columns>
        <columns>Phoenix_Status__c</columns>
        <columns>Phoenix_DRL_or_CustomerTemplateAgreement__c</columns>
        <columns>Phoenix_OWN_USE_Clause_Exists__c</columns>
        <columns>Phoenix_Shelf_Life_Requirements__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today_s</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Customer_s_Agreement_Effective_D__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Phoenix_Customer_Name__c</columns>
        <columns>Phoenix_Contract_Category__c</columns>
        <columns>Phoenix_Contracts_Assignment__c</columns>
        <columns>Phoenix_Auto_Renewal__c</columns>
        <columns>Phoenix_Customer_s_SAP_Class_of_Trade__c</columns>
        <columns>Phoenix_Customer_s_Purchase_Method__c</columns>
        <columns>Phoenix_Days_Notice_Needed_for_CP_Increa__c</columns>
        <columns>Phoenix_Damage_Allowance_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Terms Matrix</label>
    </listViews>
    <nameField>
        <label>Term Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terms Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>If_prepay_is_yes_payment_fields_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Phoenix_Is_Customer_Prepay__c , &apos;Yes&apos;),
NOT(AND(ISBLANK( Phoenix_Check_Payment__c ),ISBLANK(  Phoenix_Check_Payment_Discount_Days__c ) ,ISBLANK(  Phoenix_Check_Payment_Net_Days__c ),ISBLANK(  Phoenix_ACH__c ),ISBLANK(  Phoenix_ACH_Discount_Days__c ),ISBLANK(  Phoenix_ACH_Net_Days__c ))))</errorConditionFormula>
        <errorMessage>If Customer Prepay is Yes, then Payment Term fields should be blank.</errorMessage>
    </validationRules>
</CustomObject>